# DSA103

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml  tests.yaml
EDA-lectures-7-8/: README.md  pyproject.toml
EDA-lectures-7-8/src/lecture_7/: DSA_iris_dataset.csv  eda_iris_part2.ipynb  eda_iris_part3.ipynb  material_visualisation.py
EDA-lectures-7-8/src/lecture_8/: EDA_with_Simple_ML_Models.ipynb  PubChem_compound_text_salicylic acid.csv
LifeScienceData/: pyproject.toml
LifeScienceData/lecture11/: ELN_export.txt  ORD_Aza_Heck_Dataset.pbtxt  SmilesVisualiser.ipynb
LifeScienceData/lecture12/: acetylchloride.gjf  acetylchloride.mol  acetylchloride.mol2  acetylchloride.mop  acetylchloride.xyz  fingerprints.ipynb  reactionencoding.ipynb  xyz_xtract.ipynb
LifeScienceData/lecture13/: NV2110.cif  RDKIt_Workshop.ipynb  delaney.csv
LifeScienceData/lecture15/: data_wrangling.ipynb  melt_pivot.ipynb  patients_info.csv
LifeScienceData/lecture16/: data_wrangling.ipynb  melt_pivot.ipynb  patient_list_extended.csv  patients_info.csv  patients_list_complete.csv  patients_results_messy.csv
LifeScienceData/lecture17/: statistics.ipynb
LifeScienceData/lecture18/: colour_palettes.ipynb  enzyme_kinetics_df.csv  protein_melting.csv  visualisation.ipynb
LifeScienceData/lecture18/material for slides/: barplot-good-vs-bad.ipynb  data_generator.py  exploratory vs. explanatory.ipynb  scatterplot-good-vs-bad.ipynb
LifeScienceData/lecture19/: visualisation2.ipynb
LifeScienceData/lecture19/material_for_slides/: hierarchical_clustering.ipynb  multivariate_plots.ipynb
LifeScienceData/src/lecture_11_prep_material/: ord_extractor.py
exercises/lecture_1/: exercise.ipynb  exercise1.ipynb
exercises/lecture_10/: README.md
exercises/lecture_16/: exercise_16.ipynb
exercises/lecture_16/data/: inference_retro_checkpoint_6260.csv  rxn_cache.json
exercises/lecture_18_visualisation/: exercise_18.ipynb  exercise_18_solution.ipynb
exercises/lecture_2/: exercise.ipynb  exercise1.ipynb  exercise1_solution.ipynb  exercise2.ipynb  exercises2and3.ipynb  exercises2and3_solution.ipynb
exercises/lecture_3/: exercise.ipynb  exercise3.ipynb  exercise_l3.ipynb  exercise_l3_solutions.ipynb
exercises/lecture_4/: exercise.ipynb  exercise4.ipynb  exercise_l4.ipynb  exercise_l4_solutions.ipynb
exercises/lecture_5/: README.md
exercises/lecture_6/: README.md
exercises/lecture_6/data/: setup_A.csv  setup_B.csv
exercises/lecture_7/: README.md  wine_eda_solution.py
exercises/lecture_8/: README.md
exercises/lecture_9/: README.md  pubchem_search.py
exercises/lecture_9/solution/: ecoli_mics.csv  (+4 more)
exercises/lectures_11-12/: README.md  yne.gjf
lecture9/: pyproject.toml
lecture9/lecture9-material/: ache_activities.csv  ache_pubchem_descriptors.csv  ache_qsar_data.csv  generate-dataset.ipynb  hypothesis.ipynb
prep_lecture9/scripts/: wine_eda.py
projects/: DataStoryTemplate.docx  DocumentationDataManagementTemplate.docx  ReadingScientificPapers.docx
python-chemistry-intro/scripts/: explore_formula.py
python-chemistry-intro/tests/: test_chemistry_tools.py
scripts/: reaction_analysis.py  rxn_fwd_mock.py
tests/: test_chemistry_tools.py
(+25 files in other folders)
